[gd_scene load_steps=27 format=3 uid="uid://bycx5snr304xk"]

[ext_resource type="Script" path="res://scenes/characters/Enemy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dgmhft8dl1n3d" path="res://textures/temp-pj/pj.png" id="2"]
[ext_resource type="PackedScene" uid="uid://b2m2nyig1yidl" path="res://scenes/misc/ItemSpawner.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://vyds0vs88ah5" path="res://scenes/characters/movement/HurtBox.tscn" id="3_tkquw"]
[ext_resource type="Texture2D" uid="uid://qjowafifjm62" path="res://textures/enemy/zombie_walk.png" id="4_hlxtn"]
[ext_resource type="PackedScene" uid="uid://cblo0y3rqammv" path="res://scenes/characters/movement/Health.tscn" id="6_0o5ch"]
[ext_resource type="PackedScene" uid="uid://bqsury0s0vq8l" path="res://scenes/characters/movement/SightRange.tscn" id="7_1ug1d"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 35.8589
height = 71.7178

[sub_resource type="AtlasTexture" id="AtlasTexture_m3wmj"]
atlas = ExtResource("4_hlxtn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ysee"]
atlas = ExtResource("4_hlxtn")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbggn"]
atlas = ExtResource("4_hlxtn")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10sr2"]
atlas = ExtResource("4_hlxtn")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp357"]
atlas = ExtResource("4_hlxtn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p45va"]
atlas = ExtResource("4_hlxtn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgog6"]
atlas = ExtResource("4_hlxtn")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoogp"]
atlas = ExtResource("4_hlxtn")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgynx"]
atlas = ExtResource("4_hlxtn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1nr1"]
atlas = ExtResource("4_hlxtn")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yf60"]
atlas = ExtResource("4_hlxtn")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhsqk"]
atlas = ExtResource("4_hlxtn")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s31gc"]
atlas = ExtResource("4_hlxtn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_osbf5"]
atlas = ExtResource("4_hlxtn")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxr63"]
atlas = ExtResource("4_hlxtn")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_peq4p"]
atlas = ExtResource("4_hlxtn")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7q67h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3wmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ysee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbggn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10sr2")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp357")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p45va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgog6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoogp")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgynx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1nr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yf60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhsqk")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s31gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osbf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxr63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peq4p")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wuu5n"]
radius = 8.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1")
WALK_SPEED = 150
metadata/_edit_horizontal_guides_ = [-71.0]

[node name="sprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
texture = ExtResource("2")
flip_h = true
hframes = 8
vframes = 4
frame = 9

[node name="hitbox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("1")

[node name="hurtbox" parent="." instance=ExtResource("3_tkquw")]

[node name="item_spawner" parent="." instance=ExtResource("3")]
item_type = "cosine"

[node name="anims" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7q67h")
animation = &"walk_down"

[node name="Health" parent="." instance=ExtResource("6_0o5ch")]

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="attack_range" type="Area2D" parent="." groups=["enemy_weapons"]]
collision_layer = 0
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_wuu5n")

[node name="sight_range" parent="." instance=ExtResource("7_1ug1d")]

[node name="state_changer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="attack_range" to="." method="_on_enter_attack_range"]
[connection signal="area_exited" from="attack_range" to="." method="_on_exit_attack_range"]
